@@ -14,7 +14,7 @@ ZoomingReinvented_default-map-zoom-level=Defines at what zoom level the map open
 ZoomingReinvented_quick-zoom-out-zoom-level=Defines at what zoom level the map opens when using 'Quick zoom out'. Note that map labels disappear at zoom level below 0.0157.
 ZoomingReinvented_binoculars-zoom-level=Defines at what zoom level the map opens when using the Binoculars item.
 ZoomingReinvented_binoculars-double-action-enabled=If enabled, when using Binoculars in the map view and the labels on the map are not visible, Binoculars will first zoom in only enough to show the map labels. Using them again will zoom in to the configured 'Binoculars zoom level'.
-ZoomingReinvented_disable-map-zoom-out=Defines whether to disable map zooming out after the map position has changed (by dragging, using move controls or zooming in). This is to prevent sudden map position changes when zooming out (see known issues for explanation why this happens). If this option is selected, after you move the map, the only way to zoom out is to reopen the map, use 'Quick zoom out' or zoom in to the 'zoom to world' view and hover over some object - this will update last known map position and allow to zoom out again.
+ZoomingReinvented_disable-map-zoom-out=Defines whether to disable map zooming out after the map position has changed (by dragging, using move controls or zooming in). This is to prevent sudden map position changes when zooming out (see known issues for explanation why this happens). If this option is selected, after you move the map, the only way to zoom out is to reopen the map, use 'Quick zoom out', use 'Enable zoom out' or zoom in to the 'zoom to world' view and hover over some object - this will update last known map position and allow to zoom out again.
 
 [controls]
 ZoomingReinvented_quick-zoom-in=Quick zoom in
